# qdrant-qa-workshop

./: README.md  docker-compose.yaml  pyproject.toml
notebooks/: .gitignore  01-data-exploration.ipynb  02-neural-embeddings.ipynb  03-vector-search.ipynb  04-fine-tuning.ipynb  05-fine-tuned-search.ipynb  model.py
